--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "antd": "^5.24.5",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
